# agent-app

./: README.md  example.env  pyproject.toml  requirements.txt
.github/workflows/: docker-images.yml  ecr-images.yml
agents/: sage.py  scholar.py  settings.py
api/: main.py  settings.py
api/routes/: playground.py  teams.py  v1_router.py
db/: README.md  alembic.ini  init_db.py  session.py  settings.py
db/migrations/: env.py
db/migrations/versions/: 5472205a0c98_auto_generated_migration.py  8ea178904eb8_merge_heads.py  ba530ab945a2_auto_generated_migration.py  d036de8a5903_add_excel_workflow_sessions_table.py
db/tables/: __init__.py  base.py  excel_workflow_sessions.py  workflow_settings.py
scripts/: build_dev_image.sh  build_prd_image.sh  deploy.sh  ensure_db_tables.py  entrypoint.sh
teams/: __init__.py  deep_research.py  enova_deep_research.py  finance_researcher.py  journalism_team.py  multi_language.py  operator.py  settings.py
tmp/: excel_processor_agent.db
ui/: Home.py  css.py  utils.py
ui/pages/: 1_Sage.py  2_Scholar.py  3_Language_team.py  4_Finance_team.py  5_Blog_post_generator.py  6_Investment_report_generator.py  7_Excel_processor.py  8_Enova_Deep_Research.py  8_Journalism_team.py
workflows/: blog_post_generator.py  excel_session_manager.py  excel_workflow.py  investment_report_generator.py  settings.py  settings_manager.py
workspace/: dev_resources.py  prd_resources.py  settings.py
workspace/example_secrets/: prd_app_secrets.yml
